# Salbotics-filecompressor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  GEMINI.md  LICENSE  README.md  SECURITY.md  pyproject.toml  salbotics-filecompressor-cli.spec  salbotics-filecompressor.spec
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: tests.yml
docs/: RELEASE_CHECKLIST.md
docs/releases/: v0.2.0.md
scripts/: build_exe.ps1  package_release.ps1  run_cli.py  run_gui.py  smoke_images.py  smoke_real_pdf.py  verify_release_package.py
src/salbotics_filecompressor/: __init__.py  cli.py  compressor.py  engine_registry.py  errors.py  gui.py
tests/: test_cli.py  test_compressor.py  test_engine_registry.py  test_gui.py
