[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "salbotics-filecompressor"
version = "0.2.0"
description = "Windows utility for compressing files toward a target size."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pillow>=10",
]
authors = [
  { name = "Salbotics" }
]
license = { text = "MIT" }
keywords = ["pdf", "image", "compression", "ghostscript", "tkinter"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/SaladinIART/Salbotics-filecompressor"
Repository = "https://github.com/SaladinIART/Salbotics-filecompressor"
Issues = "https://github.com/SaladinIART/Salbotics-filecompressor/issues"

[project.scripts]
salbotics-filecompressor = "salbotics_filecompressor.cli:main"
salbotics-filecompressor-gui = "salbotics_filecompressor.gui:main"

[project.optional-dependencies]
dev = [
  "pyinstaller>=6",
  "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]
